# portfolio_simulator

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_migration.md  documentation.md  migration.md  migration_vercel_cloudflare.md  portfolio_simulator.py  portfolio_simulator_dashboard.py  portfolio_simulator_ui.py  pyproject.toml  requirements.txt  restructure.md  test_dca.py  test_fees_taxes.py  test_rebalancing.py
.devcontainer/: devcontainer.json
modules/: backtesting.py  data_operations.py  financial_calculations.py
portfolio-simulator-api/: Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
portfolio-simulator-api/alembic/: env.py
portfolio-simulator-api/app/: __init__.py  main.py
portfolio-simulator-api/app/api/: __init__.py  deps.py
portfolio-simulator-api/app/core/: __init__.py  config.py  database.py  security.py
portfolio-simulator-api/app/models/: __init__.py  portfolio.py  simulation.py  user.py
portfolio-simulator-api/app/schemas/: __init__.py  auth.py  portfolio.py  report.py  simulation.py
portfolio-simulator-api/app/services/: __init__.py  auth_service.py  portfolio_service.py  report_service.py  (+1 more)
portfolio-simulator-web/: README.md  package.json
portfolio-simulator-web/app/: layout.tsx  page.tsx
portfolio-simulator-web/hooks/: useAuth.ts  usePortfolio.ts  useSimulation.ts
reports/: __init__.py  data_models.py  factory.py  pdf_generator.py
scripts/: run_simulator.py  run_ui.py
src/portfolio_simulator/: __init__.py
tests/: __init__.py  conftest.py  utils.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_portfolio_simulator.py
tests/unit/: __init__.py  test_backtesting.py  test_config.py  test_data_operations.py  test_financial_calculations.py  test_simulation_engine.py  test_visualization.py
ui/: dashboard.py
ui/components/: results_display.py  sidebar_inputs.py  state_manager.py
(+37 files in other folders)
